Update release preparation: Add release notes, update changelog date, improve release script documentation, and update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ dist/
 build/
 *.egg-info/
 
+# Release packages
+filematcher-*.zip
+filematcher-*.tar.gz
+
 # Unit test / coverage reports
 htmlcov/
 .tox/
