chore: update model profile to balanced

--- a/.planning/config.json
+++ b/.planning/config.json
@@ -4,5 +4,11 @@
   "parallelization": true,
   "notes": {
     "testing": "Include unit tests with each feature to maintain comprehensive coverage"
+  },
+  "model_profile": "balanced",
+  "workflow": {
+    "research": true,
+    "plan_check": true,
+    "verifier": true
   }
 }
