chore(15-01): update pyproject.toml entry point
- Change entry point from file_matcher:main to filematcher.cli:main
- Add packages = ['filematcher'] for package installation
- Keep py-modules = ['file_matcher'] for backward compatibility

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,13 +27,14 @@ classifiers = [
 ]
 
 [project.scripts]
-filematcher = "file_matcher:main"
+filematcher = "filematcher.cli:main"
 
 [build-system]
 requires = ["setuptools>=61.0"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
+packages = ["filematcher"]
 py-modules = ["file_matcher"]
 
 [tool.pytest.ini_options]
